--- a/_posts/2021-06-08-java8-action-1.md
+++ b/_posts/2021-06-08-java8-action-1.md
@@ -1,10 +1,10 @@
 ---
-title: 《java8实战》
+title: 《java8实战》笔记
 tags: java 流操作
 categories: java
 ---
 
-# 最近看同事们的Java代码，发现一些简单清晰的利用stream处理与搜集数据的便利性，特拿来《Java8实战》这本书籍来看。
+最近看同事们的Java代码，发现一些简单清晰的利用stream处理与搜集数据的便利性，特拿来《Java8实战》这本书籍来看。
 
 1. 什么时候使用Java8的新特性stream？有且只有一个标准，以代码清晰度为准绳；
 2. 判断为null？java中空指针异常是永远的痛，一冲动就是添加一个if!=null，其实这种思维只适用于快速解决问题，理论上是从根本上考虑我们的业务和数据模型在这种情况下是否应该返回一个null，增加判断只是暂时的掩盖了问题，使得下次该问题的调查和修复更加困难，而其他的同事很可能使下个星期或下个月要面对这个问题的人；
