--- a/_posts/2021-06-08-git暂存操作.md
+++ b/_posts/2021-06-08-git暂存操作.md
@@ -14,7 +14,9 @@ categories: 版本控制
 
 ```git
 git add . 指定文件
-git stash 暂存（存储在本地，并将项目本次操作还原）
+# git stash 暂存（存储在本地，并将项目本次操作还原）
+git stash save "注释"
+git stash -a 或 git stash save -a "注释"  有新文件的时候，使用 -a 参数
 git stash pop 使用上一次暂存，并将这个暂存删除（使用该命令后，如果有冲突，终端会显示，如果有冲突，先解决冲突）
 git stash apply stash@{id} stash@{id}里面的id默认从0开始，最近的暂存为0
 git stash list 查看所有的暂存
