--- a/_posts/2021-03-13-JVM与Java体系结构.md
+++ b/_posts/2021-03-13-JVM与Java体系结构.md
@@ -1,3 +1,9 @@
+---
+title: jvm与java体系结构
+tags: jvm
+categories: jvm
+---
+
 # 字节码
 
 1. Java字节码，指的是用Java语言编译成的字节码，准确的说任何能在JVM平台上执行的字节码格式都是一样的。所以应该统称为：JVM字节码；
