--- a/_posts/2021-03-21-虚拟机栈.md
+++ b/_posts/2021-03-21-虚拟机栈.md
@@ -1,3 +1,9 @@
+---
+title: 虚拟机栈
+tags: jvm
+categories: jvm
+---
+
 ## 虚拟机栈概述
 
 由于跨平台性的设计，Java的指令都是根据栈来设计的，不同平台CPU架构会不同，所以不能设计为基于寄存器的。**优点是跨平台，指令集小，编译器容易实现，缺点是性能下降，实现同样的功能需要更多的指令。**
