架构师之路

--- a/_posts/2021-06-23-架构师之路（持续完善）.md
+++ b/_posts/2021-06-23-架构师之路（持续完善）.md
@@ -14,20 +14,21 @@ categories: 职业发展
    1. 阅读时间：7.9 - 8.9
    2. 目标：能在工作当中实际使用
    3. 笔记 + 代码 + 工作实战 + 博客
-3. MyBatis、MyBatis Plus ps:资料待找
-4. Maven ps:资料待找
-5. 《java进阶训练营》二刷
-6. 《java核心技术1》
-7. 《java核心技术2》
-8. 《java编程思想》
-9. 《小马哥讲Spring核心编程思想》极客时间专栏
+3. 《Spring实战》
+4. 《小马哥讲Spring核心编程思想》极客时间专栏
+5. MyBatis、MyBatis Plus ps:资料待找
+6. Maven ps:资料待找
+7. 《java核心技术1》
+8. 《java核心技术2》
+9. 《java编程思想》
 10. 《雷丰阳2021版SpringBoot2零基础入门springboot全套完整版》B站视频
 
 # Java进阶
 
-1. 《宋红康详解java虚拟机》B站视频
-2. 《深入理解Java虚拟机》
-3. Java并发编程
+1. 《java进阶训练营》二刷
+2. 《宋红康详解java虚拟机》B站视频
+3. 《深入理解Java虚拟机》
+4. Java并发编程
 
 # 计算机基础
 
