--- a/_posts/2021-06-23-架构师之路（持续完善）.md
+++ b/_posts/2021-06-23-架构师之路（持续完善）.md
@@ -10,11 +10,8 @@ categories: 职业发展
    1. 阅读时间：6.28 - 7.8
    2. 目标：能够优雅的写出Java8的风格代码
    3. 笔记 + 代码 + 博客
-2. 《设计模式之美》极客时间专栏
-   1. 阅读时间：7.9 - 8.9
-   2. 目标：能在工作当中实际使用
-   3. 笔记 + 代码 + 工作实战 + 博客
 3. 《Spring实战》
+4. 《Spring5框架最新教程》尚硅谷视频
 4. 《小马哥讲Spring核心编程思想》极客时间专栏
 5. MyBatis、MyBatis Plus ps:资料待找
 6. Maven ps:资料待找
@@ -25,10 +22,14 @@ categories: 职业发展
 
 # Java进阶
 
-1. 《java进阶训练营》二刷
-2. 《宋红康详解java虚拟机》B站视频
-3. 《深入理解Java虚拟机》
-4. Java并发编程
+1. 《设计模式之美》极客时间专栏
+   1. 阅读时间：7.9 - 8.9
+   2. 目标：能在工作当中实际使用
+   3. 笔记 + 代码 + 工作实战 + 博客
+2. 《java进阶训练营》二刷
+3. 《宋红康详解java虚拟机》B站视频
+4. 《深入理解Java虚拟机》
+5. Java并发编程
 
 # 计算机基础
 
