--- a/_posts/2021-06-23-架构师之路（持续完善）.md
+++ b/_posts/2021-06-23-架构师之路（持续完善）.md
@@ -36,7 +36,14 @@ categories: 职业发展
 1. 《数据结构与算法之美》极客时间专栏
 2. 操作系统
 3. 网络协议
-4. ...
+4. 书单（黑皮书）
+   1. 计算机组成与设计
+   2. 编译原理
+   3. Linux内核设计与实现
+   4. 现代操作系统
+   5. 计算机网络：自顶向下方法
+   6. 算法导论
+   7. 深入理解计算机系统
 
 # 中间件
 
