架构师之路，修改

--- a/_posts/2021-06-23-架构师之路（持续完善）.md
+++ b/_posts/2021-06-23-架构师之路（持续完善）.md
@@ -1,5 +1,5 @@
 ---
-title: 架构师之路
+ßtitle: 架构师之路
 tags: 架构师
 categories: 职业发展
 ---
@@ -12,8 +12,8 @@ categories: 职业发展
    1. 阅读时间：6.28 - 7.8
    2. 目标：能够优雅的写出Java8的风格代码
    3. 笔记 + 代码 + 博客
-2. MyBatis、MyBatis Plus ps:资料待找
-3. Maven ps:资料待找
+2. Maven ps:资料待找
+3. MyBatis、MyBatis Plus ps:资料待找
 4. 《java核心技术1》
 5. 《java核心技术2》
 6. 《java编程思想》
@@ -35,7 +35,10 @@ categories: 职业发展
 
 # 计算机基础
 
-1. 《数据结构与算法之美》极客时间专栏
+1. 数据结构与算法
+   1. 《数据结构与算法之美》极客时间专栏
+   2. 《数据结构与算法之美》书籍
+   3. B站视频
 2. 操作系统
 3. 网络协议
 4. 书单（黑皮书）
